<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/upbackgroundd"
    android:padding="16dp">

    <!-- Title -->
    <!-- Title -->

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/group_name"
        android:textColor="#A681AF"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/formCard"
        android:layout_width="344dp"
        android:layout_height="506dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/transparentbg"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:ignore="TextSizeCheck">

        <!-- Header -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="6dp"
            android:fontFamily="@font/poppins_bold"
            android:shadowColor="#55000000"
            android:shadowDx="0"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold" />


        <!-- Username -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins"
            android:text="@string/username"
            android:textColor="@color/TextStroke" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            tools:ignore="LabelFor,RtlSymmetry,TextFields" />

        <!-- Password -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/password"
            android:textColor="@color/TextStroke" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            tools:ignore="LabelFor" />

        <!-- Confirm Password -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/confirm_password"
            android:textColor="@color/TextStroke" />

        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            tools:ignore="LabelFor,RtlSymmetry" />

        <!-- Email -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/email"
            android:textColor="@color/TextStroke" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            tools:ignore="LabelFor,RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/formCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Signup Btn -->

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/poppins"
            android:text="@string/signupbtn"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="ButtonStyle,DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

        <!-- Login Btn-->

        <Button
            android:id="@+id/logInButton"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/login_button"
            android:fontFamily="@font/poppins"
            android:text="@string/loginbtn"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="ButtonStyle,TouchTargetSizeCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
